# C-game

./: CMakeLists.txt  bitmap.c  bitmap.h  gaym_functions.c  gaym_functions.h  gaym_structs.h  main.c  string_func.c  string_func.h
Gaym Functions/: gaym_functions.c  gaym_functions.h  gaym_structs.h  tasks.c
Hero/: hero.c  hero.h
Labirint/: labirint.c  labirint.h
String Advanced/: string_func.c  string_func.h
